--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "xs-signature",
-  "version": "0.1.2",
+  "version": "0.1.6",
   "description": "H5手写签名适配横屏",
   "main": "index.js",
   "private": false,
@@ -13,12 +13,16 @@
     "watch": "jest --watchAll",
     "coverage": "jest --coverage"
   },
-  "keywords": ["signature","vue3","canvas","component"],
+  "keywords": [
+    "signature",
+    "vue3",
+    "canvas",
+    "component"
+  ],
   "author": "smallSun <1248010874@qq.com>",
   "license": "ISC",
   "dependencies": {
     "scss": "^0.2.4",
-    "vant": "^4.9.3",
     "vue": "^3.4.35",
     "vue-signature-pad": "^3.0.2"
   }
