--- a/.gitignore
+++ b/.gitignore
@@ -7,29 +7,18 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
-
 node_modules
-.DS_Store
-dist
+#dist
 dist-ssr
-coverage
 *.local
 
-
-/cypress/videos/
-/cypress/screenshots/
-
 # Editor directories and files
-dzht/*
 .vscode/*
 !.vscode/extensions.json
 .idea
+.DS_Store
 *.suo
 *.ntvs*
 *.njsproj
 *.sln
 *.sw?
-
-*.tsbuildinfo
-dzht/index.html
-
