--- a/package.json
+++ b/package.json
@@ -1,29 +1,25 @@
 {
-  "name": "xs-signature",
-  "version": "0.2.2",
-  "description": "H5手写签名适配横屏",
-  "main": "index.js",
-  "private": false,
-  "files": [
-    "index.js",
-    "src/**/*.vue"
-  ],
+  "name": "xs-signature-demo",
+  "author": "smallSun <1248010874@qq.com>",
+  "license": "ISC",
+   "description": "H5手写签名适配横屏",
+  "main": "vite.config.js",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
   },
-  "keywords": [
-    "signature",
-    "vue3",
-    "canvas",
-    "component"
-  ],
-  "author": "smallSun <1248010874@qq.com>",
-  "license": "ISC",
   "dependencies": {
     "scss": "^0.2.4",
-    "vue": "^3.4.35",
+    "vue": "^3.5.12",
     "vue-signature-pad": "^3.0.2"
+  },
+  "devDependencies": {
+    "@vitejs/plugin-vue": "^5.1.4",
+    "sass-embedded": "^1.81.0",
+    "vite": "^5.4.10"
   }
 }
